added a barh graph

--- a/index.ipynb
+++ b/index.ipynb
@@ -3297,7 +3297,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Recommendation"
+   ]
   },
   {
    "cell_type": "markdown",
