created seaborn graph

--- a/index.ipynb
+++ b/index.ipynb
@@ -3160,7 +3160,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Correlation Between vote_count And avg_rating"
+   ]
   },
   {
    "cell_type": "code",
