--- a/index.ipynb
+++ b/index.ipynb
@@ -2954,7 +2954,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Correlation Between gross_profit And popularity"
+    "<!-- ### Correlation Between gross_profit And popularity -->"
    ]
   },
   {
