added some narration

--- a/index.ipynb
+++ b/index.ipynb
@@ -2954,12 +2954,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<!-- ### Correlation Between gross_profit And popularity -->"
+    "### Correlation Between gross_profit And popularity"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
